                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.0

  *) [TS-2457] Protocol.c: change usage of atoi to strtol.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2459] Fix wrong name for a couple of librecord APIs.
    Author: Yu Qing <happy_fish100@yahoo.com.cn>

  *) [TS-2463] Crash regression around slow-log feature, when logging an
   event. This fixes commit c290ce0df2a.

  *) [TS-32] Fix ICP. Author: Gota Adachi <ada@iij.ad.jp>

  *) [TS-2248] Segmentation fault in HttpTunnel with flow control.
   Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2454] Fix undefined reference to `__sync_fetch_and_sub_8' on ARM
   32bit system.

  *) [TS-2450] Fix assertion failure for T61String type.

  *) [TS-2117] make hipes plugin build.

  *) [TS-2452] Can't access a deleted object.

  *) [TS-2363] Fix assertion of "Unknown file format type!".

  *) [TS-2448] Fix traffic_cop and traffic_manager to obey the
   proxy.config.local_state_dir setting.

  *) [TS-2445] Fix problem with 204 responses closing POST requests.

  *) [TS-2434] Use the FATAL error level to handle plugin errors.

  *) [TS-2203] Clarify syslog startup messages for standalone log programs.

  *) [TS-2436] Add a simple integration test harness.

  *) [TS-2355] ATS 4.0.x crashes when using OpenSSL 1.0.1e.

  *) [TS-2432] Fix a race in aio_err_callblk.

  *) [TS-2251] Simplify LogBuffer reference counting.

  *) [TS-2190] Remove cache.log from the cachurl plugin.

  *) [TS-2426] Add a new plugin, xdebug, for cache debugging using HTTP
   headers.

  *) [TS-2077] Remove pipeline configurations, they were no-op's anyways. We
   still support pipelining (we always do), it's just not treated specially
   (or optimized).

  *) [TS-2386] clean up unused files and codes -- round 4.2.

  *) [TS-548] remove Initialize.cc Initialize.h

  *) [TS-2082] remove STANDALONE_IOCORE FIXME_NONMODULAR and NON_MODULAR
   defines.
