@@ -971,76 +971,6 @@ HttpTransactHeaders::insert_basic_realm_in_proxy_authenticate(const char *realm,
 }
 
 
-inline void
-HttpTransactHeaders::process_connection_field_in_outgoing_header(HTTPHdr *base, HTTPHdr *header)
-{
-  _process_xxx_connection_field_in_outgoing_header(MIME_FIELD_CONNECTION, MIME_LEN_CONNECTION, base, header);
-}
-
-inline void
-HttpTransactHeaders::process_proxy_connection_field_in_outgoing_header(HTTPHdr *base, HTTPHdr *header)
-{
-  _process_xxx_connection_field_in_outgoing_header(MIME_FIELD_PROXY_CONNECTION, MIME_LEN_PROXY_CONNECTION, base, header);
-}
-
-
-void
-HttpTransactHeaders::process_connection_headers(HTTPHdr *base, HTTPHdr *outgoing)
-{
-  process_connection_field_in_outgoing_header(base, outgoing);
-  process_proxy_connection_field_in_outgoing_header(base, outgoing);
-}
-
-
-void
-HttpTransactHeaders::_process_xxx_connection_field_in_outgoing_header(const char *wks_field_name,
-                                                                      int wks_field_name_len,
-                                                                      HTTPHdr *base, HTTPHdr *header)
-{
-  MIMEField *con_hdr;
-  con_hdr = base->field_find(wks_field_name, wks_field_name_len);
-
-  if (con_hdr) {
-    int val_len;
-    const char *val;
-
-    if (!con_hdr->has_dups()) { // try fastpath first
-      val = con_hdr->value_get(&val_len);
-      if ((ptr_len_casecmp(val, val_len, "keep-alive", 10) == 0) || (ptr_len_casecmp(val, val_len, "close", 5) == 0)) {
-        return;
-      }
-    }
-    {
-      HdrCsvIter iter;
-      val = iter.get_first(con_hdr, &val_len);
-
-      while (val) {
-
-        const char *wks = hdrtoken_string_to_wks(val, val_len);
-        if (wks) {
-          if ((wks != HTTP_VALUE_KEEP_ALIVE) && (wks != HTTP_VALUE_CLOSE) &&
-              (wks != MIME_FIELD_HOST) && (wks != MIME_FIELD_DATE)) {
-            int wks_length = hdrtoken_wks_to_length(wks);
-            header->field_delete(wks, wks_length);
-          }
-        } else {
-          // the following are needed to delete non-standard HTTP headers.
-          MIMEHdrImpl *m_hdr_impl = header->m_http->m_fields_impl;
-          MIMEField *hdr_to_remove;
-
-          // The specified header is not a standard HTTP header.
-          hdr_to_remove = _mime_hdr_field_list_search_by_string(m_hdr_impl, val, val_len);
-          if (hdr_to_remove)
-            header->field_delete(hdr_to_remove);
-        }
-
-        val = iter.get_next(&val_len);
-      }
-    }
-  }
-}
-
-
 void
 HttpTransactHeaders::remove_conditional_headers(HTTPHdr *outgoing)
 {
